PROJECT (XTPROXY)
MESSAGE(STATUS "BIN DIR=" ${PROJECT_BINARY_DIR})

SET(CMAKE_C_FLAGS "-g -Wall -O0")
SET(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS "-rdynamic")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_C_COMPILER "gcc")

ADD_SUBDIRECTORY(src)

